samples/_failures_safe/1761375006_dace06_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_11f9f0f1.c: In function ‘main’:
./samples/SAFE/__tmp_11f9f0f1.c:167:9: error: expected expression at end of input
  167 |         {0, "",
      |         ^
./samples/SAFE/__tmp_11f9f0f1.c:167:9: error: expected declaration or statement at end of input
